2004-10-25  Adam Schreiber <sadam@clemson.edu>

	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade: First time startup assistant (bug #111937)
	
2004-10-25  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-context.c: Fix crash when no 'Encrypt to Self' 
	but no default key selected
	* plugins/gedit/seahorse-gedit.c: Use more version portable functions
	for accessing document content (bug# 156368)
	* agent/seahorse-agent-cache.glade:
	* libseahorse/seahorse-passphrase.glade:
	* plugins/nautilus/seahorse-pgp-preferences.glade:
	* src/seahorse-multi-encrypt.glade: HIG fixes
	* libseahorse/seahorse-default-key-control.c: Fixed problems when 
	populating the default key control (bug# 156308)
	* agent/seahorse-agent-io.c: Don't answer password requests from wrong
	display (bug# 156306)
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h: Fix seahorse_context_get_n_key_pairs 
	function declaration
	* agent/seahorse-agent-status.c: Fix problems with password cache tray 
	icon not showing up and other image probs
	
2004-10-24  Nate Nielsen <nielsen@memberwebs.com>
	
	* agent/seahorse-agent.c: Restore modified gpg.conf values to previous
	values on exit (bug# 156304)
	* plugins/nautilus/seahorse-pgp-preferences-cache.c: Format properly 
	while the file is still new
	* plugins/nautilus/seahorse-pgp-preferences-cache.c: Disable cache tab
	if another agent is running (bug# 156305)
	
2004-10-23  Adam Schreiber <sadam@clemson.edu>

	* src/seahorse-generate-druid.c: Key generation assistant stops with 
    name < 5 chars (bug# 154602)
	
2004-10-23  Nate Nielsen <nielsen@memberwebs.com>

	* seahorse-key-manager-store.c: Fix problems with showing wrong 
	columns (bug# 156167)
	* seahorse-key-store.c: Fix sorting again after above change
	* seahorse-context.c: Now updates properly when importing into
	an empty keyring (bug# 156168)
	
2004-10-20  Nate Nielsen <nielsen@memberwebs.com>
