@@ -1,3 +1,8 @@
+2004-10-26  Nate Nielsen <nielsen@memberwebs.com>
+
+	* src/seahorse-pgp-preferences-cache.c: Fix crash resulting from 
+	missing glade file
+	
 2004-10-25  Adam Schreiber <sadam@clemson.edu>
 
 	* src/seahorse-key-manager.c:
